--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 3.3)
 
 project(paraminf)
 
 set(CMAKE_CXX_STANDARD 17)
 
-find_package(catkin)
+find_package(ament_cmake REQUIRED)
 
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(YAML_CPP REQUIRED yaml-cpp)
@@ -15,6 +15,8 @@ include (add_doxygen_compile)
 include (add_gtest_compile)
 
 # add compile options
+option(BUILD_SHARED_LIBS "Build shared libraries" ON)
+
 option(BUILD_TEST "Build tests" OFF)
 option(BUILD_DOC "Build documentation" OFF)
 option(BUILD_ALL "Build all" OFF)
@@ -24,28 +26,16 @@ if(BUILD_ALL)
   set(BUILD_DOC ON)
 endif()
 
-# setup catkin package
-catkin_package(
-  INCLUDE_DIRS include
-  LIBRARIES ${PROJECT_NAME}
-)
 
-###################################
-## catkin specific configuration ##
-###################################
-
-catkin_package(
-  INCLUDE_DIRS include
-  LIBRARIES ${PROJECT_NAME}
-)
+ament_export_include_directories(include)
+ament_export_libraries(${PROJECT_NAME})
 
 ###########
 ## Build ##
 ###########
 
-
 include_directories(
-  include ${catkin_INCLUDE_DIRS}
+  include
   ${yaml-cpp_INCLUDE_DIR}
   ${Boost_INCLUDE_DIR}
 )
@@ -64,26 +54,25 @@ set(SOURCES
 ## Declare a cpp library
 add_library(${PROJECT_NAME} ${SOURCES} ${HEADERS})
 
-add_dependencies(${PROJECT_NAME} ${catkin_EXPORTED_TARGETS})
-
 ## Specify libraries to link a library or executable target against
-target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} yaml-cpp)
+target_link_libraries(${PROJECT_NAME} yaml-cpp)
 
 #############
 ## Install ##
 #############
 
-## Mark executables and/or libraries for installation
-install(TARGETS ${PROJECT_NAME}
-  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+install(
+  DIRECTORY include/
+  DESTINATION include
 )
 
-## Mark cpp header files for installation
-install(DIRECTORY include/${PROJECT_NAME}/
-  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-  FILES_MATCHING PATTERN "*.h"
+install(TARGETS
+  ${PROJECT_NAME}
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION bin
+  INCLUDES DESTINATION include
+  DESTINATION lib/${PROJECT_NAME}
 )
 
 #############
@@ -102,3 +91,5 @@ add_gtest_compile()
 ##########
 
 add_doxygen_compile()
+
+ament_package()
