--- a/test/test_yaml_files/expected_result_ordered.yaml
+++ b/test/test_yaml_files/expected_result_ordered.yaml
@@ -14,7 +14,7 @@ category:
     parameter112_double: -1.0
     parameter123_int: -7
     parameter211_string_vector: [A, B, C, D, e, f, g, h, 123x]
-    parameter222_double_vector: [-0.12, 0.4, 123456789.1234568, 4.0]
+    parameter222_double_vector: [-0.12, 0.40000000000000002, 123456789.12345679, 4.0]
     paremeter124_bool: true
     paremeter125_bool: false
     paremeter224_bool_vector: [true, false, false, true]
